add shadow colors and add some shadow in text

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,10 @@
     android:text="LOGIN"
     android:textStyle="bold"
     android:fontFamily="@font/balsamiqsans_bold"
+    android:shadowDx="10"
+    android:shadowDy="10"
+    android:shadowColor="@color/shadow"
+    android:shadowRadius="0.01"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
@@ -30,6 +34,10 @@
         android:textColor="@color/font"
         android:textSize="80px"
         android:fontFamily="@font/balsamiqsans_regular"
+        android:shadowColor="@color/shadow"
+        android:shadowDy="12"
+        android:shadowDx="0"
+        android:shadowRadius="3"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -58,6 +66,10 @@
         android:fontFamily="@font/balsamiqsans_regular"
         android:textSize="80px"
         android:textColor="@color/font"
+        android:shadowDx="0"
+        android:shadowDy="12"
+        android:shadowRadius="0.01"
+        android:shadowColor="@color/shadow"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -84,6 +96,10 @@
         android:height="160px"
         android:hint="SUBMIT"
         android:textSize="70px"
+        android:shadowColor="@color/shadow"
+        android:shadowRadius="0.01"
+        android:shadowDy="10"
+        android:shadowDx="0"
         android:textColorHint="@color/font"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
