--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="secfont">#AA94CF</color>
     <color name="button">#FFFFFF</color>
     <color name="heading">#FFFFFF</color>
+    <color name="shadow">#4B4B4B</color>
 </resources>
