--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
         app:layout_constraintVertical_bias="0.876" />
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/tologin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:width="700px"
@@ -101,7 +101,7 @@
         app:layout_constraintVertical_bias="0.634" />
 
     <Button
-        android:id="@+id/regist"
+        android:id="@+id/toregist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:width="700px"
