--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -89,6 +89,7 @@
         app:layout_constraintVertical_bias="0.707" />
 
     <Button
+        android:id="@+id/regisbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:width="210dp"
