--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome \nBack, Nico"
+        android:text="Welcome \nBack,"
         android:textSize="50dp"
         android:textColor="@color/font"
         android:shadowDx="0"
@@ -23,6 +23,25 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintVertical_bias="0.05"
         app:layout_constraintHorizontal_bias="0.1"/>
+
+    <TextView
+        android:id="@+id/tv_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name"
+        android:textSize="50dp"
+        android:textColor="@color/font"
+        android:shadowDx="0"
+        android:shadowDy="12"
+        android:shadowRadius="12"
+        android:shadowColor="@color/shadow"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintVertical_bias="0.135"
+        app:layout_constraintHorizontal_bias="0.50"/>
+
 
     <ImageView
         android:layout_width="120dp"
@@ -97,6 +116,7 @@
         app:layout_constraintHorizontal_bias="0.185"/>
 
     <ImageView
+        android:id="@+id/img_logout"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:background="@drawable/arrow"
