--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -38,6 +38,7 @@
         app:layout_constraintVertical_bias="0.13" />
 
     <EditText
+        android:id="@+id/et_userregist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -55,6 +56,7 @@
         app:layout_constraintVertical_bias="0.445" />
 
     <EditText
+        android:id="@+id/et_passregist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -72,6 +74,7 @@
         app:layout_constraintVertical_bias="0.575" />
 
     <EditText
+        android:id="@+id/et_repassregist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
