changin onClick in logbutton

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -113,7 +113,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintVertical_bias="0.74"
-        android:onClick="signin"/>
+        android:onClick="loginuser"/>
 
     <ImageView
         android:layout_width="wrap_content"
