--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="heading">#FFFFFF</color>
     <color name="shadow">#4B4B4B</color>
     <color name="divider">#603F98</color>
+    <color name="nav">#7B1FA2</color>
 </resources>
